--- a/notebooks/Compressible Flow Calculation.ipynb
+++ b/notebooks/Compressible Flow Calculation.ipynb
@@ -5,7 +5,7 @@
    "id": "3f1f5c0a",
    "metadata": {},
    "source": [
-    "<center><h1>可压缩流动相关计算</h1></center>\n",
+    "<center><h1>可压缩流动相关计算11111111111111111</h1></center>\n",
     "<center><h4>韩国晨</h4></center>\n",
     "<center><h4>Jan-2026</h4></center>\n",
     "\n",
@@ -2032,7 +2032,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2046,7 +2046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
