update isothermal formula

--- a/notebooks/Compressible Flow Calculation.ipynb
+++ b/notebooks/Compressible Flow Calculation.ipynb
@@ -5,7 +5,7 @@
    "id": "3f1f5c0a",
    "metadata": {},
    "source": [
-    "<center><h1>可压缩流动相关计算123</h1></center>\n",
+    "<center><h1>可压缩流动相关计算</h1></center>\n",
     "<center><h4>韩国晨</h4></center>\n",
     "<center><h4>Jan-2026</h4></center>\n",
     "\n",
@@ -1953,35 +1953,24 @@
     "可见，公式结果与程序结果一致。\n",
     "\n",
     "### 简化压降计算公式\n",
-    "根据质量守恒方程、理想气体状态方程和等温的条件：\n",
+    "等温流动中根据质量守恒方程和理想气体状态方程，得到：\n",
     "$$\n",
     "\\frac{p_1}{p}=\\frac{\\rho_1}{\\rho}=\\frac{V}{V_1}\\Longrightarrow \\frac{\\rho_1^2}{\\rho^2}=\\frac{V^2}{V_1^2} \\Longrightarrow \\frac{\\rho_1V_1^2}{\\rho V^2}=\\frac{\\rho}{\\rho_1}=\\frac{p}{p_1}\\Longrightarrow\\frac{1}{\\rho V^2}=\\frac{p}{\\rho_1V_1^2p_1}\n",
     "$$\n",
-    "\n",
-    "动量守恒方程两边除以 $\\rho V^2/2$ 后代入上式：\n",
+    "将上述推论代入到动量守恒方程后积分：\n",
     "$$\n",
-    "\\frac{2\\mathrm{d}p}{\\rho V^2}+2\\frac{\\mathrm{d}V}{V}+\\frac{f_d}{D_h}\\mathrm{d}L=0\\Longrightarrow \\frac{2p\\mathrm{d}p}{\\rho_1V_1^2p_1}+2\\frac{\\mathrm{d}V}{V}+\\frac{f_d}{D_h}\\mathrm{d}L=0\n",
+    "\\frac{\\mathrm{d}p}{\\rho V^2}+\\frac{\\mathrm{d}V}{V}+f_d\\frac{dL}{2D_h}=0 \\Longrightarrow \\frac{2p}{\\rho_1V_1^2p_1}\\mathrm{d}p+\\frac{2\\mathrm{d}V}{V}+f_d\\frac{dL}{D_h}=0 \\Longrightarrow\n",
+    "\\int_{p1}^{p2}\\frac{2p}{\\rho_1V_1^2p_1}\\mathrm{d}p+\\frac{2\\mathrm{d}V}{V}+\\frac{f_d}{D_h}\\int_{L1}^{L2}\\mathrm{d}L=0 \\Longrightarrow \\frac{1}{\\rho_1V_1^2p_1}(p_2^2-p_1^2)+2\\ln\\frac{V_2}{V_1}+\\frac{f_d}{D_h}(L_2-L_1)=0\n",
     "$$\n",
-    "\n",
-    "截面1到截面2的距离为 L，积分结果如下：\n",
-    "$$\n",
-    "\\frac{2}{\\rho_1V_1^2p_1}\\int_{1}^{2} p\\,\\mathrm{d}p+2\\int_{1}^{2} \\frac{1}{V}\\,\\mathrm{d}V+\\frac{f_d}{D_h}\\int_{1}^{2} \\,\\mathrm{d}L=0 \\Longrightarrow p_1^2-p_2^2=\\rho_1V_1^2p_1\\left(2\\ln{\\frac{V_2}{V_1}+\\frac{f_dL}{D_h}}\\right)\n",
-    "$$\n",
-    "\n",
     "长管道一般满足如下条件：\n",
     "$$\n",
-    "2\\ln{\\frac{V_2}{V_1}} \\ll \\frac{f_dL}{D_h}\n",
+    "2\\ln{\\frac{V_2}{V_1}} \\ll \\frac{f_d}{D_h}(L_2-L_1)\n",
+    "$$\n",
+    "令$L_2-L_1=L$，上式简化为：\n",
+    "$$\n",
+    "p_1^2-p_2^2=\\rho_1V_1^2p_1\\frac{f_d}{2D_h}\\Longrightarrow p_2^2=p_1^2\\left(1-\\frac{\\rho_1V_1^2}{p_1}\\cdot\\frac{f_d}{2D_h}\\right)=p_1^2\\left(1-\\frac{V_1^2}{RT}\\cdot\\frac{f_d}{2D_h}\\right)\n",
     "$$\n",
     "\n",
-    "则简化上式为：\n",
-    "$$\n",
-    "p_1^2-p_2^2=\\rho_1V_1^2p_1\\frac{f_dL}{D_h}\\Longrightarrow p_2=p_1\\sqrt{1-\\frac{\\rho_1V_1^2}{p_1}\\cdot\\frac{f_dL}{D_h}}\n",
-    "$$\n",
-    "\n",
-    "等温流动 $RT$ 是常数，则：\n",
-    "$$\n",
-    "\\frac{\\rho_1}{p_1}=\\frac{1}{RT}\n",
-    "$$\n",
     "\n",
     "这样就得到了 $p_2$ 的计算式：\n",
     "$$\n",
