--- a/notebooks/dP  Calculation for Compressible Flow in Duct .ipynb
+++ b/notebooks/dP  Calculation for Compressible Flow in Duct .ipynb
@@ -178,7 +178,6 @@
     "绝热流动和等温流动是可压缩流体在等截面管道内两种典型的流动型式。流体在较好保温管中或较短裸管中的流动可被视为绝热流动。这是因为流体在离开管道之前，只能与环境短暂换热，所以换热量常常忽略不计。安全阀的排放就是一种典型的绝热流动。对于较长的裸管，由于流体能够与环境充分换热，并最终达到热平衡，因此一般被当作等温流动处理。\n",
     "\n",
     "### 控制方程\n",
-    "\n",
     "任何流动都受质量守恒方程和能量守恒方程（研究管流时一般忽略做功和势能的变化）的制约，摩擦流还受如下形式动量守恒方程的制约。\n",
     "$$\n",
     "\\begin{gathered}\n",
@@ -200,9 +199,15 @@
     "\\mathrm{d}h = c_p\\mathrm{d}T\n",
     "$$\n",
     "气体的定压比热容对温度不敏感，例如，空气的温度从 -18 C 升至 2760 C，定压比热容仅上升 30%。因此，常常假定气体的定压比热容为常数。\n",
+    "### 马赫数\n",
+    "马赫数定义为流体流速与当地声速的比值，是流体动能和焓相对比重的度量。\n",
+    "$$\n",
+    "Ma=\\frac{V}{c}=\\frac{V}{\\sqrt{\\left(\\dfrac{\\partial p}{\\partial \\rho}\\right)_s}}=\\frac{V}{\\sqrt{kR_gT}}\n",
+    "$$\n",
+    "\n",
     "\n",
     "### 计算单元\n",
-    "分段计算是流体流动最基本的计算方法，方法核心是：将整个管道分成 N 个计算单元，逐段计算，将每段出口参数作为下一段的进口参数。如此往复，迭代推进。分段越短，误差越小，但计算量亦随之增加。\n",
+    "步进计算是流体流动最基本的计算方法，方法核心是：将整个管道分成 N 个计算单元，逐段计算，将每段出口参数作为下一段的进口参数。如此往复，小步推进。分段越短，误差越小，但计算量亦随之增加。\n",
     "\n",
     "下图示意了绝热流动的计算单元。已知进口参数（$p_1,T_1,V_1$）和几何尺寸（$L,D_h$），求出口参数（$p_2,T_2,V_2$）。\n",
     "<div align=\"center\">\n",
@@ -1071,7 +1076,7 @@
     "L^* = \\left\\{ \\frac{1-Ma^2}{k Ma^2} + \\frac{k+1}{2k} \\ln\\left[{\\frac{(k+1)Ma^2}{2+(k-1)Ma^2}}\\right] \\right \\} \\times \\frac{D_h}{f_d}= \\left\\{ \\frac{1-0.28653^2}{1.4 \\times 0.28653^2} + \\frac{1.4+1}{2 \\times 1.4} \\ln\\left[{\\frac{(1.4+1) \\times 0.28653^2}{2+(1.42-1) \\times 0.28653^2}}\\right] \\right\\} \\times \\frac{0.1}{0.02} = 29.94\\ \\text{m}\n",
     "$$\n",
     "\n",
-    "### 流动参关系\n",
+    "### 流动参数关系\n",
     "对上节的推导式 $\\mathrm{d}x/x$ 分别积分，便可得到任意两点的参数比与对应马赫数的关系。\n",
     "$$\n",
     "\\begin{aligned}\n",
